--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.mail.username=8d2a71401e367a
 spring.mail.password=91314f6d3cf186
 spring.mail.protocol=smtp
 ############ JWT Properties #####################
-jwt.expiration.time=900000
-jwt.public.key=classpath:app.pub
-## This is strictly for demo purpose only,
+##jwt.expiration.time=900000
+##jwt.public.key=classpath:app.pub
+#### This is strictly for demo purpose only,
 # DO NOT define the private key in the repository like this in your personal projects
-jwt.private.key=classpath:app.key
-server.port=8080
+##jwt.private.key=classpath:app.key
+##server.port=8080
